# llamenos-platform

./: -a  .dev.vars.example  .dockerignore  .env.example  .env.live.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.build  NEXT_BACKLOG.md  README.md  bun.lockb  drizzle.config.ts  esbuild.node.mjs  eslint.config.js  knope.toml  lefthook.yml  package.json  playwright.config.ts  playwright.docker.config.ts  playwright.live.config.ts  tsconfig.json  vite.config.ts  vitest.integration.config.ts  vitest.unit.config.ts  wrangler.jsonc
.claude/: settings.json
.github/: dependabot.yml
deploy/: PRODUCTION_CHECKLIST.md
docs/: ARCHITECTURE.md  CAPACITY_PLANNING.md  COMPLETED_BACKLOG.md  DESKTOP_BUILD.md  DEVELOPMENT_SETUP.md  DOCUMENTATION_GUIDE.md  DR_SCENARIOS.md  HUMAN_INSTRUCTIONS.md  NEXT_BACKLOG.md  OPERATOR_HANDBOOK.md  QUICKSTART.md  QUICK_REFERENCE.md  RELAY_OPERATIONS.md  REPRODUCIBLE_BUILDS.md  RUNBOOK.md  TEMPLATE_AUTHORING.md  android-data-safety.md  android-play-store-metadata.md  android-store-assets.md  ios-app-store-metadata.md
flatpak/: org.llamenos.Hotline.desktop  org.llamenos.Hotline.metainfo.xml  org.llamenos.Hotline.yml
scripts/: android-parallel-e2e.sh  bootstrap-admin.ts  build-iso.sh  bump-version.ts  check-ipc-allowlist.sh  dev-bun.sh  dev-setup.sh  dev-tunnel.sh  download-linphone-ios.sh  extract-ios-screenshots.sh  ios-build.sh  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/isolation/: index.html
src-tauri/src/: crypto.rs  lib.rs  main.rs
(+2222 files in other folders)
